delete intUnaryOperator in method searchOddIndexAndSubtractOne and create constant in class CandidateValidator